--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/ezzy1337/scribbles/issues"
   },
-  "homepage": "https://github.com/ezzy1337/scribbles#readme"
+  "homepage": "https://github.com/ezzy1337/scribbles#readme",
+  "devDependencies": {
+    "@types/react": "^18.0.25",
+    "react": "^18.2.0",
+    "typescript": "^4.8.4"
+  }
 }
