--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-scribbles",
-  "version": "0.1.1",
+  "version": "0.0.1",
   "description": "A Completely Unstyled Component Library",
   "main": "src/index.js",
   "scripts": {
@@ -17,6 +17,14 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ezzy1337/scribbles/issues"
+  },
+  "exports": {
+    "Navigation": {
+      "import": "./src/Navigation"
+    },
+    "Buttons": {
+      "import": "./src/Buttons"
+    }
   },
   "homepage": "https://github.com/ezzy1337/scribbles#readme",
   "devDependencies": {
